test/corpus/call_bundle.txt
==================
Calling a bundle
==================

bundle agent main
{
  methods:
    "Something else",
      usebundle => ns:bundle_name("arg1", "arg2");
}

---

(source_file
  (bundle_block
    (bundle_block_keyword)
    (bundle_block_type)
    (bundle_block_name)
    (bundle_block_body
      (bundle_section
        (promise_guard)
        (promise
          (promiser)
          (attribute
            (attribute_name)
            (call
              (calling_identifier
                (qualified_identifier))
              (quoted_string)
              (quoted_string))))))))
==================
Calling a variable expansion bundle
==================

bundle agent main
{
  methods:
    "Something else",
      usebundle => $(method)("$(satellite)");
}

---

(source_file
  (bundle_block
    (bundle_block_keyword)
    (bundle_block_type)
    (bundle_block_name)
    (bundle_block_body
      (bundle_section
        (promise_guard)
        (promise
          (promiser)
          (attribute
            (attribute_name)
            (call
              (calling_identifier
                (dollar_expression
                  (dollar_expression_operator)
                  (dollar_expression_start)
                  (dollar_expression_reference
                    (qualified_identifier))
                  (dollar_expression_end)))
              (quoted_string))))))))
