test/corpus/call_function.txt
==================
Calling a function
==================

bundle agent main
{
  files:
    "/tmp/hello_world.txt"
      content => "Hello, world",
      if => fileexists("$(this.promiser)");
}

---

(source_file
  (bundle_block
    (bundle_block_keyword)
    (bundle_block_type)
    (bundle_block_name)
    (bundle_block_body
      (bundle_section
        (promise_guard)
        (promise
          (promiser)
          (attribute
            (attribute_name)
            (quoted_string))
          (attribute
            (attribute_name)
            (call
              (calling_identifier
                (qualified_identifier))
              (quoted_string))))))))
