test/corpus/expressions.txt
==================
Dollar and @ expressions
==================

bundle agent main
{
  vars:
    "list"
      slist => { @(bundle.value) };
    "string"
      string => $(ns:bundle.value);
}

---

(source_file
  (bundle_block
    (bundle_block_keyword)
    (bundle_block_type)
    (bundle_block_name)
    (bundle_block_body
      (bundle_section
        (promise_guard)
        (promise
          (promiser)
          (attribute
            (attribute_name)
            (list
              (at_expression
                (at_expression_operator)
                (at_expression_start)
                (at_expression_reference
                  (variable_identifier))
                (at_expression_end)))))
        (promise
          (promiser)
          (attribute
            (attribute_name)
            (dollar_expression
              (dollar_expression_operator)
              (dollar_expression_start)
              (dollar_expression_identifier)
              (dollar_expression_end))))))))

==================
Double expand - Recursive dollar expression
==================

bundle agent main
{
  vars:
    "string"
      string => $($(ns:bundle.value));
}

---

(source_file
  (bundle_block
    (bundle_block_keyword)
    (bundle_block_type)
    (bundle_block_name)
    (bundle_block_body
      (bundle_section
        (promise_guard)
        (promise
          (promiser)
          (attribute
            (attribute_name)
            (dollar_expression
              (dollar_expression_operator)
              (dollar_expression_start)
              (dollar_expression
                (dollar_expression_operator)
                (dollar_expression_start)
                (dollar_expression_identifier)
                (dollar_expression_end))
              (dollar_expression_end))))))))
