test/corpus/macros.txt
==================
Only macros
==================

@if minimum_version(3.24)
bundle agent my_bundle {}
@else
bundle agent their_bundle {}
@endif

---

(source_file
  (macro)
  (bundle_block
    (bundle_block_keyword)
    (bundle_block_type)
    (bundle_block_name)
    (bundle_block_body))
  (macro)
  (bundle_block
    (bundle_block_keyword)
    (bundle_block_type)
    (bundle_block_name)
    (bundle_block_body))
  (macro))

==================
Macros and half promises
==================
bundle agent my_bundle
{
  vars:
    "foo"
@if minimum_version(3.24)
      string => call(variable, call("bar"));
@else
      string => {};
@endif
  reports:
    "foo";
}

---

(source_file
  (bundle_block
    (bundle_block_keyword)
    (bundle_block_type)
    (bundle_block_name)
    (bundle_block_body
      (bundle_section
        (promise_guard)
        (promise
          (promiser)
          (macro)
          (attribute
            (attribute_name)
            (call
              (calling_identifier
                (qualified_identifier))
              (qualified_identifier)
              (call
                (calling_identifier
                  (qualified_identifier))
                (quoted_string)))))
        (macro)
        (half_promise
          (attribute
            (attribute_name)
            (list))))
      (macro)
      (bundle_section
        (promise_guard)
        (promise
          (promiser))))))
