test/corpus/promise_attributes.txt
==================
Promise attributes
==================

bundle agent main
{
  vars:
    "foo"
      string => "bar",
      if => "any";

  reports:
    "Hello, world!";
}

---

(source_file
  (bundle_block
    (bundle_block_keyword)
    (bundle_block_type)
    (bundle_block_name)
    (bundle_block_body
      (bundle_section
        (promise_guard)
        (promise
          (promiser)
          (attribute
            (attribute_name)
            (quoted_string))
          (attribute
            (attribute_name)
            (quoted_string))))
      (bundle_section
        (promise_guard)
        (promise
          (promiser))))))
