test/corpus/promise_block.txt
==================
Promise type definitions (promise blocks)
==================
promise agent my_promise_type
{
  path => "/a/b/c";
  linux::
    interpreter => "/d/e/f";
  windows::
    interpreter => "/g/h/i";
}

---

(source_file
  (promise_block
    (promise_block_keyword)
    (promise_block_type)
    (promise_block_name)
    (promise_block_body
      (attribute
        (attribute_name)
        (quoted_string))
      (class_guarded_promise_block_attributes
        (class_guard)
        (attribute
          (attribute_name)
          (quoted_string)))
      (class_guarded_promise_block_attributes
        (class_guard)
        (attribute
          (attribute_name)
          (quoted_string))))))
