test/corpus/qualified_identifier.txt
==================
Promise attributes
==================

bundle agent main
{
  classes:
    "my_class";
  vars:
    "foo"
      string => "bar",
      if => default:main.my_class;
}

---

(source_file
  (bundle_block
    (bundle_keyword)
    (bundle_type)
    (bundle_name)
    (bundle_body
      (bundle_section
        (promise_guard)
        (promise
          (promiser)))
      (bundle_section
        (promise_guard)
        (promise
          (promiser)
          (attribute
            (attribute_name)
            (right_value
              (quoted_string)))
          (attribute
            (attribute_name)
            (right_value
              (qualified_identifier))))))))
