test/corpus/quoted_stakeholder.txt
==================
Quoted string as stakeholder
==================

bundle agent my_bundle
{
  reports:
    "promiser" -> "stakeholder";
}

---

(source_file
  (bundle_block
    (bundle_keyword)
    (bundle_type)
    (bundle_name)
    (bundle_body
      (bundle_section
        (promise_guard)
        (promise
          (promiser)
          (stakeholder
            (quoted_string)))))))
