test/corpus/slist.txt
==================
slist
==================

bundle agent main
{
  vars:
    "a"
      slist => {"foo", "bar", "baz"};
    "b"
      slist => {
        "lorem",
        "ipsum",
      };
}

---

(source_file
  (bundle_block
    (bundle_keyword)
    (bundle_type)
    (bundle_name)
    (bundle_body
      (bundle_section
        (promise_guard)
        (promise
          (promiser)
          (attribute
            (attribute_name)
            (list
              (quoted_string)
              (quoted_string)
              (quoted_string))))
        (promise
          (promiser)
          (attribute
            (attribute_name)
            (list
              (quoted_string)
              (quoted_string))))))))
